# ppx_implicits

./: .hgignore  Changes.txt  META  META.in  Motivation.md  OMakefile  OMyMakefile  README.md  _oasis  development.opam  development.opam.locked  opam  setup.ml  shell.nix
doc/: prop.md  prop.tex
lib/: .merlin  META  OMakefile  implicits.ml  ppx_implicits.ml  ppx_implicits.mli  runtime.ml  runtime.mli
old_tests/: OMakefile  adm.ml  aggressive.ml  build_and_go.sh  constraint.ml  double_use.ml  highk.ml  imp.ml  imp1.ml  imp2.ml  imp31.ml  imp3_derive.ml  imp4.ml  just.ml  kgap.ml  length_class.ml  monad_hk.ml  multiparam.ml  multiparam2.ml  numdef.ml  numuse.ml  opened.ml  opened_fail.ml  packer.ml  prop.ml  showc.ml  tcsimple.ml  template.ml  typeclass2.ml  typeclass6.ml
opam/: opam
opam_template/: opam
ppx/: .merlin  META  META.in  OMakefile  candidate.auto.mli  candidate.ml  candidate.mli  cderiving.ml  chas_type.ml  chas_type.mli  compile.ml  compilerlib.ml  compilerlibx.ml  cppxderive.ml  cppxderive.mli  crelated.auto.mli  crelated.ml  crelated.mli  ctypeclass.ml  ctypeclass.mli  deriving.ml  example.ml  forge.ml  klabel.ml  klabel.mli  legacy.ml  legacy_final_check.ml  legacy_type_reduction.ml  migrate_register.ml  mod.ml  mod.mli  options.ml  policy.ml  policy.mli  ppx.ml  ppx_final_check.ml  ppx_type_reduction.ml  ppxx.ml  pre.ml  pre.mli  (+18 more)
test/: OMakefile  adm.ml  example.ml  fail.ml  imp.ml  imp1.ml  imp2.ml  imp3.ml  imp4.ml  nonfail.ml  outermodule.ml  separate_compilation.ml  show.ml  show2.ml  show3.ml
tests/: OMakefile  add.ml  add_optimized.ml  (+54 more)
(+9 files in other folders)
